<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.asmjahid.fileuploadfirebase.MainActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="serif-monospace"
        android:text="@string/file_upload"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/select_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/white_btn_background"
        android:text="@string/select_file_to_upload"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <LinearLayout
        android:id="@+id/upload_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/buttom_layout"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/uploading_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/your_file_is_uploading" />

        <TextView
            android:id="@+id/filetype_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="15dp"
            android:text="@string/filetype" />

        <ProgressBar
            android:id="@+id/upload_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:progressDrawable="@drawable/progress_bar_custom"
            android:progress="0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/mb" />

            <TextView
                android:id="@+id/progress_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="end"
                android:text="@string/percent" />

        </LinearLayout>

        <Button
            android:id="@+id/pause_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pause_background"
            android:fontFamily="sans-serif"
            android:padding="15dp"
            android:text="@string/pause_upload"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cancel_background"
            android:fontFamily="sans-serif"
            android:text="@string/cancel_upload"
            android:textAllCaps="false"
            android:textColor="@color/colorOrange" />
    </LinearLayout>


</RelativeLayout>
