<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.asmjahid.fileuploadfirebase.UploadActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/file_upload_sys"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <LinearLayout
        android:id="@+id/buttom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/buttom_layout"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/multiple_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/pause_background"
            android:fontFamily="sans-serif"
            android:padding="15dp"
            android:text="@string/multiple"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/file_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pause_background"
            android:padding="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/file_upload_with_progressbar"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/video_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pause_background"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/video_stream"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>

