<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.asmjahid.fileuploadfirebase.VideoStreamActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/video_stream"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <RelativeLayout
        android:id="@+id/video_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:layout_margin="20dp"
        android:background="@drawable/buttom_play"
        android:orientation="vertical"
        android:padding="0dp">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <ProgressBar
            android:id="@+id/bufferProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_layout"
        android:layout_margin="20dp"
        android:padding="0dp"
        android:background="@drawable/buttom_play">

        <ImageView
            android:id="@+id/Play_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_play_arrow_black_24dp"
            android:contentDescription="@string/newimage" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:text="@string/zero" />

        <ProgressBar
            android:id="@+id/video_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:progress="0"/>

        <TextView
            android:id="@+id/duration_time"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:text="@string/zero" />

    </LinearLayout>

</RelativeLayout>

